objects/Interest_Rate_Matrix__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Credit_Rating_Matrix__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Credit Rating Matrix</label>
        <referenceTo>genesis__Credit_Rating_Matrix__c</referenceTo>
        <relationshipLabel>Interest Rate Matrix</relationshipLabel>
        <relationshipName>Interest_Rate_Matrix</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Default_Interest_Rate__c</fullName>
        <description>This field contains default value of interest. This is not a delta value rather replaces the actual rate with this value.</description>
        <label>Default Interest Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Field_API_Name__c</fullName>
        <label>Field API Name</label>
        <picklist>
            <picklistValues>
                <fullName>pepP1__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>pepP2__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>pepP3__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>pepP4__c</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Field_Value__c</fullName>
        <label>Field Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interest_Rate_Delta__c</fullName>
        <label>Interest Rate Delta</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <label>Interest Rate Matrix</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Credit_Rating_Matrix__c</columns>
        <columns>Field_API_Name__c</columns>
        <columns>Field_Value__c</columns>
        <columns>Interest_Rate_Delta__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>IRM-{0000000000}</displayFormat>
        <label>Interest Rate Matrix Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interest Rate Matrix</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>